--- a/src/samples/scala/quickstart/build.gradle
+++ b/src/samples/scala/quickstart/build.gradle
@@ -1,8 +1,8 @@
+// START SNIPPET declare-scala-version
 usePlugin 'scala'
 
 repositories {
     mavenRepo urls: 'http://scala-tools.org/repo-releases/'
-    mavenCentral()
 }
 
 dependencies {
@@ -10,7 +10,16 @@ dependencies {
     scalaTools 'org.scala-lang:scala-compiler:2.7.6'
     scalaTools 'org.scala-lang:scala-library:2.7.6'
 
+    // Libraries needed for scala api
     compile 'org.scala-lang:scala-library:2.7.6'
+}
+// END SNIPPET declare-scala-version
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.7'
 }
