--- a/src/samples/java/multiproject/api/build.gradle
+++ b/src/samples/java/multiproject/api/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 // END SNIPPET project-dependencies
 
 // Just a smoke test that using this option does not lead to any exception
-compileJava.options.compilerArgs = [[value: '-Xlint:unchecked']]
+compileJava.options.compilerArgs = ['-Xlint:unchecked']
 
 task spiJar(type: Jar) {
     appendix = 'spi'
