--- a/subprojects/gradle-docs/src/samples/clientModuleDependencies/api/build.gradle
+++ b/subprojects/gradle-docs/src/samples/clientModuleDependencies/api/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 	runtime project(':shared')
 }
 
-task testDeps(dependsOn: configurations.runtime.buildDependencies) << {
+task testDeps(dependsOn: configurations.runtime) << {
 	Assert.assertEquals(['commons-lang-2.4.jar', 'commons-io-1.2.jar', 'shared-1.0.jar'] as Set,
             configurations.runtime.files.collect { it.name } as Set)
 }
