--- a/subprojects/gradle-docs/src/samples/java/multiproject/buildSrc/build.gradle
+++ b/subprojects/gradle-docs/src/samples/java/multiproject/buildSrc/build.gradle
@@ -1,5 +1,10 @@
 usePlugin 'java'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile files(BootstrapUtil.gradleClasspath)
+    testCompile group: 'junit', name: 'junit', version: '4.7'
 }
