--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'core'
 include 'ui'
 include 'openApi'
 include 'docs'
+// include 'fork-launcher'
 
 rootProject.name = 'gradle'
 rootProject.children.each {project ->
