Make sure there's a space in the path of the int test image

--- a/build.gradle
+++ b/build.gradle
@@ -301,7 +301,7 @@ artifacts {
     }
 }
 
-integTestDistDir = file("$buildDir/integ-test")
+integTestDistDir = file("$buildDir/integ test")
 integTestUserDir = file('intTestHomeDir')
 integTestGradleHome = null
 
