--- a/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/messagesConfigDependenciesAltSolution/messages/consumer/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/messagesConfigDependenciesAltSolution/messages/consumer/build.gradle
@@ -1,4 +1,4 @@
-task consume(dependsOn: ':producer:produce') << {
-    String key = project(':producer').key 
-    println "Consuming message from key '$key': " +  System.getProperty(key)
+task consume << {
+    println("Consuming message: " +
+            (rootProject.hasProperty('producerMessage') ? rootProject.producerMessage : 'null'))
 }
