--- a/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/messagesDifferentTaskNames/messages/consumer/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/multiproject/dependencies/messagesDifferentTaskNames/messages/consumer/build.gradle
@@ -1,5 +1,6 @@
 dependsOn(':producer')
 
 task consume << {
-    println "Consuming message: " +  System.getProperty('org.gradle.message')
+    println("Consuming message: " +
+            (rootProject.hasProperty('producerMessage') ? rootProject.producerMessage : 'null'))
 }
