--- a/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tutorial/mkdirTrap/build.gradle
@@ -1,4 +1,4 @@
-classesDir = new File('build/classes')
+classesDir = file('build/classes')
 classesDir.mkdirs()
 task clean << {
     ant.delete(dir: 'build')
