GRADLE-707, GRADLE-680: - Added TaskActionListener interface. Allows listeners to receive notification of a task doing some work - Exposed more listener interfaces via GradleLauncher.addListener() and Gradle.addListener(). - Introduced the concept of a logger: a listener which has the responsibility of logging the events. - Allow the logger for a given type to be replaced via Gradle.useLogger() - Extracted task execution logging out of the various TaskExecuter impls into TaskExecutionLogger - Removed duplicated JUL messages

--- a/subprojects/gradle-docs/src/samples/logging/project2/build.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/project2/build.gradle
@@ -5,3 +5,7 @@ buildscript {
     println('quietProject2ScriptClassPathOut')
     logger.info('infoProject2ScriptClassPathOut')
 }
+
+gradle.taskGraph.whenReady {
+    println 'quietProject2CallbackOut'
+}
