--- a/subprojects/gradle-docs/src/samples/logging/init.gradle
+++ b/subprojects/gradle-docs/src/samples/logging/init.gradle
@@ -4,3 +4,38 @@ println 'init info out'
 
 logger.lifecycle('init lifecycle log')
 logger.info('init info log')
+
+useLogger(new CustomLogger())
+
+class CustomLogger extends BuildAdapter implements BuildListener, ProjectEvaluationListener, TaskExecutionListener, TaskActionListener {
+    def logger = Logging.getLogger('init-script')
+
+    public void buildFinished(BuildResult result) {
+        logger.info("LOGGER: build finished")
+        println 'init callback quiet out'
+    }
+
+    public void beforeEvaluate(Project project) {
+        logger.info('LOGGER: evaluating project')
+    }
+
+    public void afterEvaluate(Project project, Throwable failure) {
+        logger.info('LOGGER: evaluated project')
+    }
+
+    public void beforeExecute(Task task) {
+        logger.info('LOGGER: executing task')
+    }
+
+    public void afterExecute(Task task, TaskExecutionResult result) {
+        logger.info('LOGGER: executed task')
+    }
+
+    public void beforeActions(Task task) {
+        logger.info('LOGGER: task starting work')
+    }
+
+    public void afterActions(Task task) {
+        logger.info('LOGGER: task completed work')
+    }
+}
