--- a/performanceTest/build.gradle
+++ b/performanceTest/build.gradle
@@ -22,7 +22,7 @@ task small(type: GeneratorTask, description: 'Generates a small project') {
 
 task largeSrc(type: GeneratorTask, description: 'Generates a single project with lots of source files') {
     destDir = new File(buildDir, 'largeSrc')
-    sourceFiles = 500
+    sourceFiles = 1000
 }
 
 task multi(type: GeneratorTask, description: 'Genetates a multi-project build') {
@@ -83,7 +83,6 @@ class GeneratorTask extends DefaultTask {
     }
 
     def generateProject(Map args) {
-        SimpleTemplateEngine engine = new SimpleTemplateEngine()
         File projectDir = args.projectDir
 
         List files = args.files + [
@@ -93,6 +92,7 @@ class GeneratorTask extends DefaultTask {
         ]
 
         Closure generate = {String name, String templateName, Map templateArgs ->
+            SimpleTemplateEngine engine = new SimpleTemplateEngine()
             File destFile = new File(projectDir, name)
             File srcTemplate = project.file("src/templates/$templateName")
             destFile.parentFile.mkdirs()
@@ -109,15 +109,17 @@ class GeneratorTask extends DefaultTask {
 
         if (args.includeSource) {
             sourceFiles.times {
-                Map classArgs = args + [productionClassName: "Production${it + 1}", testClassName: "Test${it + 1}"]
-                generate("src/main/java/org/gradle/test/performance/${classArgs.productionClassName}.java", 'Production.java', classArgs)
-                generate("src/test/java/org/gradle/test/performance/${classArgs.testClassName}.java", 'Test.java', classArgs)
+                String packageName = "org.gradle.test.performance${(int)(it / 100) + 1}"
+                Map classArgs = args + [packageName: packageName, productionClassName: "Production${it + 1}", testClassName: "Test${it + 1}"]
+                generate("src/main/java/${packageName.replace('.', '/')}/${classArgs.productionClassName}.java", 'Production.java', classArgs)
+                generate("src/test/java/${packageName.replace('.', '/')}/${classArgs.testClassName}.java", 'Test.java', classArgs)
             }
             if (groovyProject) {
                 sourceFiles.times {
-                    Map classArgs = args + [productionClassName: "ProductionGroovy${it + 1}", testClassName: "TestGroovy${it + 1}"]
-                    generate("src/main/groovy/org/gradle/test/performance/${classArgs.productionClassName}.groovy", 'Production.groovy', classArgs)
-                    generate("src/test/groovy/org/gradle/test/performance/${classArgs.testClassName}.groovy", 'Test.groovy', classArgs)
+                    String packageName = "org.gradle.test.performance${(int)(it / 100) + 1}"
+                    Map classArgs = args + [packageName: packageName, productionClassName: "ProductionGroovy${it + 1}", testClassName: "TestGroovy${it + 1}"]
+                    generate("src/main/groovy/${packageName.replace('.', '/')}/${classArgs.productionClassName}.groovy", 'Production.groovy', classArgs)
+                    generate("src/test/groovy/${packageName.replace('.', '/')}/${classArgs.testClassName}.groovy", 'Test.groovy', classArgs)
                 }
             }
         }
