Use non-forking int tests by default for developerBuild

--- a/build.gradle
+++ b/build.gradle
@@ -347,8 +347,7 @@ boolean noForkIntegTests() {
     if (project.hasProperty('forkIntegTests')) {
         return !Boolean.valueOf(forkIntegTests)
     }
-//    return gradle.taskGraph.hasTask(':developerBuild')
-    return false
+    return gradle.taskGraph.hasTask(':developerBuild')
 }
 
 task testedDists(dependsOn: [assemble, check, integTest])
